# rusqlite-webworker

./: Cargo.toml  README.md  run.sh
browser/: index.html  script.js  worker.js
src/: lib.rs
src/main_thread/: mod.rs
src/worker_thread/: mod.rs
