[package]
name = "rusqlite_webworker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# Temporary fix due to build errors
# Switch to official version of rusqlite at some point
[dependencies.rusqlite]
git="https://github.com/trevyn/rusqlite.git"
branch="wasm32-unknown-unknown-redux"
features = ["bundled"]

# [dependencies.rusqlite]
# version = "0.27.0"
# features = ["bundled"]

[dependencies.wasm-bindgen]
version = "0.2"